fix issues with jfoenix and javafx